# AzurLane-AssetDownloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  requirements.txt  ruff.toml
.github/workflows/: publish.yml  release-please.yml
src/: azl.py  downloader.py  extractor.py  main.py  obb_apk_import.py
src/azlassets/: __init__.py  classes.py  config.py  downloader.py  downloadmgr.py  extractor.py  imgrecon.py  importer.py  protobuf.py  repair.py  updater.py  versioncontrol.py
src/azlassets/config/: client_config.json  user_config_template.yml
src/azlassets/proto/: p10min_pb_pb2.py
src/lib/: __init__.py  classes.py  downloader.py  imgrecon.py  protobuf.py  repair.py  updater.py  versioncontrol.py
src/lib/proto/: p10_pb_pb2.py  p10min_pb_pb2.py
